tests/fixtures/invalid/round_str_set.py
# Cannot call round() with Str, Set[int]
x = round("hello", {1, 2, 3})
